--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "basic-auth-connect": "^1.0.0",
     "dbox": "^0.6.3",
     "express": "^4.10.6",
+    "force-ssl": "^1.0.3",
     "js-yaml": "^3.2.5",
     "mongodb": "^1.4.23"
   },
