--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "basic-auth-connect": "^1.0.0",
-    "dbox": "^0.6.3",
+    "dropbox": "^2.5.11",
     "express": "^4.10.6",
     "force-ssl": "^1.0.4",
+    "getsecret": "^1.0.2",
     "htmlspecialchars": "^1.0.4",
     "js-yaml": "^3.2.5",
     "mongodb": "^1.4.23"
